fix contact menu home on mobile

--- a/public/css/color-themes/green-theme.css
+++ b/public/css/color-themes/green-theme.css
@@ -217,6 +217,11 @@ a,
 	background-color:rgba(46,204,64,0.80);
 }
 
+
+.main-menu .navbar-collapse > .navigation > li.homecontact > a{
+	display: none;
+}
+
 @media only screen and (max-width: 767px){
 	
 	.main-menu .navbar-header .navbar-toggle{
@@ -242,4 +247,8 @@ a,
 		background-color:#2ECC40;
 	}
 	
+	
+	.main-menu .navbar-collapse > .navigation > li.homecontact > a{
+		display: inline-block;
+	}
 }
